--- a/research/04_model_trainer.ipynb
+++ b/research/04_model_trainer.ipynb
@@ -11,13 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\Text-Summarizer-Project\\\\research'"
+       "'c:\\\\Users\\\\LEGION\\\\Documents\\\\Projects\\\\Nlp\\\\Automated-Document-Summarizer\\\\research'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\Text-Summarizer-Project'"
+       "'c:\\\\Users\\\\LEGION\\\\Documents\\\\Projects\\\\Nlp\\\\Automated-Document-Summarizer'"
       ]
      },
      "execution_count": 4,
@@ -146,8 +146,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "d:\\Softwares\\anaconda3\\envs\\textS\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "c:\\Users\\LEGION\\anaconda3\\envs\\texts\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-09-30 19:05:27,317: INFO: config: PyTorch version 2.4.1 available.]\n"
      ]
     }
    ],
@@ -161,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,11 +197,11 @@
     "\n",
     "\n",
     "        trainer_args = TrainingArguments(\n",
-    "            output_dir=self.config.root_dir, num_train_epochs=1, warmup_steps=500,\n",
+    "            output_dir=self.config.root_dir, num_train_epochs=1, warmup_steps=0,\n",
     "            per_device_train_batch_size=1, per_device_eval_batch_size=1,\n",
-    "            weight_decay=0.01, logging_steps=10,\n",
-    "            evaluation_strategy='steps', eval_steps=500, save_steps=1e6,\n",
-    "            gradient_accumulation_steps=16\n",
+    "            weight_decay=0.001, logging_steps=100,\n",
+    "            evaluation_strategy='no', save_steps=1e6,\n",
+    "            gradient_accumulation_steps=1\n",
     "        ) \n",
     "\n",
     "        trainer = Trainer(model=model_pegasus, args=trainer_args,\n",
@@ -212,104 +219,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-05-18 12:54:11,649: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-05-18 12:54:11,652: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-05-18 12:54:11,654: INFO: common: created directory at: artifacts]\n",
-      "[2023-05-18 12:54:11,655: INFO: common: created directory at: artifacts/model_trainer]\n"
+      "[2024-09-30 19:07:27,562: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-09-30 19:07:27,568: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-09-30 19:07:27,573: INFO: common: created directory at: artifacts]\n",
+      "[2024-09-30 19:07:27,575: INFO: common: created directory at: artifacts/model_trainer]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "d:\\Softwares\\anaconda3\\envs\\textS\\lib\\site-packages\\transformers\\optimization.py:407: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
-      "  warnings.warn(\n",
-      "  0%|          | 0/51 [00:00<?, ?it/s]You're using a PegasusTokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n",
-      " 20%|█▉        | 10/51 [07:49<30:32, 44.70s/it]"
+      "Some weights of PegasusForConditionalGeneration were not initialized from the model checkpoint at google/pegasus-cnn_dailymail and are newly initialized: ['model.decoder.embed_positions.weight', 'model.encoder.embed_positions.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'loss': 3.3137, 'learning_rate': 1.0000000000000002e-06, 'epoch': 0.2}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 39%|███▉      | 20/51 [14:44<21:16, 41.19s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'loss': 3.1, 'learning_rate': 2.0000000000000003e-06, 'epoch': 0.39}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 59%|█████▉    | 30/51 [22:08<15:10, 43.37s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'loss': 3.0839, 'learning_rate': 3e-06, 'epoch': 0.59}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 78%|███████▊  | 40/51 [29:04<07:32, 41.17s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'loss': 2.9821, 'learning_rate': 4.000000000000001e-06, 'epoch': 0.78}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 98%|█████████▊| 50/51 [35:40<00:34, 34.19s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'loss': 3.1034, 'learning_rate': 5e-06, 'epoch': 0.98}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 51/51 [36:24<00:00, 42.84s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'train_runtime': 2184.9179, 'train_samples_per_second': 0.375, 'train_steps_per_second': 0.023, 'train_loss': 3.11656564357234, 'epoch': 1.0}\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -347,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.12.5"
   },
   "orig_nbformat": 4
  },
