model evaluation added

--- a/research/04_model_trainer.ipynb
+++ b/research/04_model_trainer.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-09-30 19:05:27,317: INFO: config: PyTorch version 2.4.1 available.]\n"
+      "[2024-09-30 19:37:26,831: INFO: config: PyTorch version 2.4.1 available.]\n"
      ]
     }
    ],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,14 +199,16 @@
     "        trainer_args = TrainingArguments(\n",
     "            output_dir=self.config.root_dir, num_train_epochs=1, warmup_steps=0,\n",
     "            per_device_train_batch_size=1, per_device_eval_batch_size=1,\n",
-    "            weight_decay=0.001, logging_steps=100,\n",
-    "            evaluation_strategy='no', save_steps=1e6,\n",
-    "            gradient_accumulation_steps=1\n",
+    "            weight_decay=0.001, logging_steps=10,\n",
+    "            evaluation_strategy='no', eval_steps=4000, save_steps=1e6,\n",
+    "            gradient_accumulation_steps=200\n",
     "        ) \n",
     "\n",
-    "        trainer = Trainer(model=model_pegasus, args=trainer_args,\n",
+    "        trainer = Trainer(model=model_pegasus, args\n",
+    "        \n",
+    "        =trainer_args,\n",
     "                  tokenizer=tokenizer, data_collator=seq2seq_data_collator,\n",
-    "                  train_dataset=dataset_samsum_pt[\"train\"], \n",
+    "                  train_dataset=dataset_samsum_pt[\"test\"], \n",
     "                  eval_dataset=dataset_samsum_pt[\"validation\"])\n",
     "        \n",
     "        trainer.train()\n",
@@ -219,36 +221,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-09-30 19:07:27,562: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-09-30 19:07:27,568: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-09-30 19:07:27,573: INFO: common: created directory at: artifacts]\n",
-      "[2024-09-30 19:07:27,575: INFO: common: created directory at: artifacts/model_trainer]\n"
+      "[2024-09-30 19:37:27,210: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-09-30 19:37:27,210: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-09-30 19:37:27,226: INFO: common: created directory at: artifacts]\n",
+      "[2024-09-30 19:37:27,226: INFO: common: created directory at: artifacts/model_trainer]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "c:\\Users\\LEGION\\anaconda3\\envs\\texts\\Lib\\site-packages\\transformers\\tokenization_utils_base.py:1617: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be deprecated in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
+      "  warnings.warn(\n",
       "Some weights of PegasusForConditionalGeneration were not initialized from the model checkpoint at google/pegasus-cnn_dailymail and are newly initialized: ['model.decoder.embed_positions.weight', 'model.encoder.embed_positions.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "c:\\Users\\LEGION\\anaconda3\\envs\\texts\\Lib\\site-packages\\transformers\\training_args.py:1545: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
+      "  warnings.warn(\n",
+      "  0%|          | 0/4 [00:00<?, ?it/s]"
      ]
     }
    ],
